tests/compile-fail/stacked_borrows/return_invalid_shr_option.stderr
error: Undefined Behavior: trying to reborrow <BORROW_IDX> for SharedReadOnly permission at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
  --> $DIR/return_invalid_shr_option.rs:LL:CC
   |
LL |         Some(_x) => {},
   |              ^^
   |              |
   |              trying to reborrow <BORROW_IDX> for SharedReadOnly permission at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
   |              this error occurs as part of a reborrow at ALLOC[$HEX..$HEX]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <BORROW_IDX> was created by a retag at offsets [$HEX..$HEX]
  --> $DIR/return_invalid_shr_option.rs:LL:CC
   |
LL |     let ret = Some(unsafe { &(*xraw).1 });
   |                             ^^^^^^^^^^
help: <BORROW_IDX> was later invalidated at offsets [$HEX..$HEX]
  --> $DIR/return_invalid_shr_option.rs:LL:CC
   |
LL |     unsafe { *xraw = (42, 23) }; // unfreeze
   |              ^^^^^^^^^^^^^^^^
   = note: inside `main` at $DIR/return_invalid_shr_option.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

